# pocketgb

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  cpu.c  cpu.h  cpu2.c  cpu_generator.py  disassembler.c  lcd.c  lcd.h  logging.h  main.c  mmu.c  mmu.h  timer.c  timer.h  window_list.c  window_list.h
templates/: opcodes.txt  operand_0.txt  operand_1.txt
